# canary-ml

./: .gitignore  CLAUDE.md  LICENSE  README.md  dashboard_app.py  mockup_dashboard.jsx  mockup_landing.html  pyproject.toml
.github/workflows/: ci.yml
canary_ml/: __init__.py  alerts.py  anomaly.py  cbpe.py  dashboard.html  drift.py  monitor.py  report.py  server.py  storage.py
docs/: demo.html  guide.html  index.html
examples/: keras_example.py  sklearn_example.py
tests/: test_alerts.py  test_anomaly.py  test_callbacks.py  test_cbpe.py  test_drift.py  test_monitor.py  test_server.py
