[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-ml"
version = "1.2.2"
description = "Lightweight drift and anomaly monitoring for production ML models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rich>=13.0",
    "tensorflow>=2.13",
]

[project.optional-dependencies]
keras = []
dev   = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage   = "https://github.com/aitor1717/canary-ml"
Repository = "https://github.com/aitor1717/canary-ml"

[tool.setuptools.packages.find]
where = ["."]
include = ["canary_ml*"]

[tool.setuptools.package-data]
canary_ml = ["dashboard.html"]
