[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-ml"
version = "1.2.4"
description = "Drift and anomaly monitoring for production scikit-learn and Keras/TensorFlow models."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
keras = ["tensorflow>=2.13"]
dev   = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage   = "https://github.com/aitor1717/canary-ml"
Repository = "https://github.com/aitor1717/canary-ml"

[tool.setuptools.packages.find]
where = ["."]
include = ["canary_ml*"]

[tool.setuptools.package-data]
canary_ml = ["dashboard.html"]
